# MewsConnector

./: .env  LICENSE  README.md  pyproject.toml
mews/: __init__.py  client.py  config.py  errors.py  pagination.py  transport.py
mews/models/: __init__.py  accounting.py  base.py  bills.py  companies.py  configuration.py  customers.py  devices.py  enterprises.py  loyalty.py  orders.py  outlets.py  payments.py  products.py  rates.py  reservations.py  resources.py  services.py  vouchers.py
mews/operations/: __init__.py  accounting.py  bills.py  companies.py  configuration.py  customers.py  devices.py  enterprises.py  loyalty.py  orders.py  outlets.py  payments.py  products.py  rates.py  reservations.py  resources.py  services.py  vouchers.py
